--- a/app/views/route_goals/new.html.erb
+++ b/app/views/route_goals/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New route goal</h1>
-
-<%= render "form", route_goal: @route_goal %>
-
-<br>
-
-<div>
-  <%= link_to "Back to route goals", route_goals_path %>
+<div class="col-lg-8 mx-auto">
+  <div class="card shadow">
+    <div class="card-header">
+      <h1>New route goal</h1>
+    </div>
+    <div class="card-body">
+      <%= render "form", route_goal: @route_goal %>
+    </div>
+  </div>
 </div>
