--- a/app/views/route_goals/show.html.slim
+++ b/app/views/route_goals/show.html.slim
@@ -3,8 +3,10 @@ p[style="color: green"]
 = render @route_goal
 
 div
-  svg width="600" height="110"
-    rect width=duration height="30" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)"
+  svg width="800" height="110"
+    text x="0" y="15" fill="red" #{@route_goal.from}
+    rect x="100" y="0" width=duration height="30" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)"
+    text x="600" y="15" fill="red" #{@route_goal.to}
 
 div
   = link_to "Edit this route goal", edit_route_goal_path(@route_goal)
