--- a/app/views/route_goals/show.html.slim
+++ b/app/views/route_goals/show.html.slim
@@ -4,12 +4,23 @@ p[style="color: green"]
 
 div
   svg width="800" height="110"
-    text x="0" y="15" fill="red" #{@route_goal.from}
-    rect x="100" y="0" width=duration height="30" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)"
-    text x="600" y="15" fill="red" #{@route_goal.to}
+    text#from x="0" y="15" fill="red" #{@route_goal.from}
+    - @from_length = 0
+    javascript:
+      var from_length = document.getElementById('from').getComputedTextLength();
+      console.log(from_length)
+    - p "from_length: #{@from_length}"
+
+    rect#main_box x="100" y="0" width=duration height="30" style="fill:rgb(0,0,255);stroke-width:3;stroke:rgb(0,0,0)"
+    text#to x="600" y="15" fill="red" #{@route_goal.to}
 
 div
   = link_to "Edit this route goal", edit_route_goal_path(@route_goal)
   |  |
   = link_to "Back to route goals", route_goals_path
   = button_to "Destroy this route goal", @route_goal, method: :delete
+
+
+    / var bbox = textElement.getBBox();
+  / var width = bbox.width;
+  / var height = bbox.height;
